https://www.elastic.co/guide/en/apm/agent/go/current/release-notes.html[elastic.co]
endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

[[unreleased]]
=== Unreleased

https://github.com/elastic/apm-agent-go/compare/v1.7.0...master[View commits]

[[release-notes-1.x]]
=== Go Agent version 1.x

[[release-notes-1.7.0]]
==== 1.7.0 - 2020/01/10

https://github.com/elastic/apm-agent-go/releases/tag/v1.7.0[View release]

 - Add span.context.destination.* {pull}664[(#664)]
 - transport: fix Content-Type for pprof data {pull}679[(#679)]
 - Add "tracestate" propagation {pull}690[(#690)]
 - Add support for API Key auth {pull}698[(#698)]
 - module/apmsql: report rows affected {pull}700[(#700)]

[[release-notes-1.6.0]]
==== 1.6.0 - 2019/11/17

https://github.com/elastic/apm-agent-go/releases/tag/v1.6.0[View release]

 - module/apmhttp: add WithClientRequestName option {pull}609[(#609)]
 - module/apmhttp: add WithPanicPropagation function {pull}611[(#611)]
 - module/apmgoredis: add Client.RedisClient {pull}613[(#613)]
 - Introduce apm.TraceFormatter, for formatting trace IDs {pull}635[(#635)]
 - Report error cause(s), add support for errors.Unwrap {pull}638[(#638)]
 - Setting `ELASTIC_APM_TRANSACTION_MAX_SPANS` to 0 now disables all spans {pull}640[(#640)]
 - module/apmzerolog: add Writer.MinLevel {pull}641[(#641)]
 - Introduce SetLabel and deprecate SetTag {pull}642[(#642)]
 - Support central config for `ELASTIC_APM_CAPTURE_BODY` and `ELASTIC_APM_TRANSACTION_MAX_SPANS` {pull}648[(#648)]
 - module/apmgorm: sql.ErrNoRows is no longer reported as an error {pull}645[(#645)]
 - Server URL path is cleaned/canonicalizsed in order to avoid 301 redirects {pull}658[(#658)]
 - `context.request.socket.remote_address` now reports the peer address {pull}662[(#662)]
 - Experimental support for periodic CPU/heap profiling {pull}666[(#666)]